changed: reduce spacing between border and form on small screens, https://github.com/kobotoolbox/enketo-express/issues/273

--- a/src/sass/core/_responsive.scss
+++ b/src/sass/core/_responsive.scss
@@ -43,7 +43,7 @@
         line-height: 1.05 * $line-height-base;
     }
     .main {
-        article {
+        .paper {
             padding: 70px $form-padding $form-padding $form-padding;
         }
     }
@@ -64,7 +64,7 @@
         width: 100%;
     }
     .main {
-        article {
+        .paper {
             padding: 70px $form-padding $form-padding $form-padding;
         }
     }
